CMBSandbox4/src/objects/Transaction__c.object
<CustomObject>
    <description>This object is to record all revenue and expenses. There will be a status to deferentiate revenue and expenses. This should help with the accounting side of the business.</description>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <formula>IF( NOT( ISBLANK(Account__r.Name)),

Account__r.Name,  Contact__r.FirstName &amp;&quot; &quot;&amp;  Contact__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account/Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_on_Invoice__c</fullName>
        <formula>Invoice_Associated__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account on Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_on_Invoice__c</fullName>
        <formula>Invoice_Associated__r.Price_Conga__c  + Invoice_Associated_2__r.Price_Conga__c</formula>
        <label>Amount on Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_Non_Hourly__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Depostied__c</fullName>
        <label>Bank Acct</label>
        <picklist>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chase (United)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chase - 0916 (CMB, INC)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Chase - dba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citibank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wells</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill2</label>
        <referenceTo>Bill__c</referenceTo>
        <relationshipLabel>Transactions (Bill2)</relationshipLabel>
        <relationshipName>Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill</label>
        <referenceTo>Bill__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <label>Check #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Difference_btw_Amount_on_Trans_Invoi__c</fullName>
        <formula>Amount_on_Invoice__c - Total_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference btw Amount on Trans &amp; Invoi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Rate__c</fullName>
        <formula>Hourly_Rate__c * Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours*Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Associated_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Associated 2</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Transactions (Invoice Associated 2)</relationshipLabel>
        <relationshipName>Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Associated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Associated</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pmt_Method__c</fullName>
        <label>Pmt Method</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuickPay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Screenshot__c</fullName>
        <label>Screenshot</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Postdated Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Amt__c</fullName>
        <formula>Hours_Rate__c +  Amt_Non_Hourly__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Transaction_Credits__c</fullName>
        <label>Total Transaction Credits</label>
        <summarizedField>Transaction_Line_Credit__c.Amount__c</summarizedField>
        <summaryForeignKey>Transaction_Line_Credit__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Transaction_Debits__c</fullName>
        <description>Calculate the total paid amount by line items for current transaction.</description>
        <label>Total Transaction Debits</label>
        <summarizedField>Transaction_Line_Debit__c.Amount__c</summarizedField>
        <summaryForeignKey>Transaction_Line_Debit__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exp - Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exp - Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exp - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exp - Pmt to Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev - Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev - Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev - Reimbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exp - Loan Repayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exp - Reimbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_ABM</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>ABM</value>
        </filters>
        <label>All ABM</label>
    </listViews>
    <listViews>
        <fullName>All_ACS_VT</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>ACS,Viat,attorney,via</value>
        </filters>
        <label>All ACS/VT</label>
    </listViews>
    <listViews>
        <fullName>All_Forward</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>forwar</value>
        </filters>
        <label>All Forward Financing</label>
    </listViews>
    <listViews>
        <fullName>All_Islands</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Islands</value>
        </filters>
        <label>All Islands</label>
    </listViews>
    <listViews>
        <fullName>All_LAK</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Levin</value>
        </filters>
        <label>All LAK</label>
    </listViews>
    <listViews>
        <fullName>All_Pearl</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Pear</value>
        </filters>
        <label>All Pearl</label>
    </listViews>
    <listViews>
        <fullName>All_SQ</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Simpl</value>
        </filters>
        <label>All SQ</label>
    </listViews>
    <listViews>
        <fullName>All_bulletin</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>bulle</value>
        </filters>
        <label>All Bulletin</label>
    </listViews>
    <listViews>
        <fullName>All_entire</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>entir</value>
        </filters>
        <label>All Entire</label>
    </listViews>
    <listViews>
        <fullName>All_infinity</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>infinit</value>
        </filters>
        <label>All Infinity</label>
    </listViews>
    <listViews>
        <fullName>All_info_logistics</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Info l</value>
        </filters>
        <label>All Info Logistics</label>
    </listViews>
    <listViews>
        <fullName>All_jaco</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>jaco</value>
        </filters>
        <label>All Jaco</label>
    </listViews>
    <listViews>
        <fullName>All_kandela</fullName>
        <columns>NAME</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>kandela</value>
        </filters>
        <label>All Kandela</label>
    </listViews>
    <listViews>
        <fullName>Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amt_Non_Hourly__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Last 30 Days</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <recordTypes>
        <fullName>Credit</fullName>
        <active>true</active>
        <description>Revenue and other incoming funds</description>
        <label>Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Debit</fullName>
        <active>true</active>
        <description>For expenses and other debits</description>
        <label>Debit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>No_Acount_or_Contact</fullName>
        <active>true</active>
        <description>Need to input either an account or contact</description>
        <errorConditionFormula>AND(
  ISBLANK( Contact__c) ,  
ISBLANK( Account__c )
)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Need to input either an account or contact</errorMessage>
    </validationRules>
</CustomObject>